Bug 689953 - Epson AcuLaser cannot output to pipe (contributed code by Epson)
Summary: Epson AcuLaser cannot output to pipe (contributed code by Epson)
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Printer Driver (show other bugs)
Version: 8.62
Hardware: PC FreeBSD
: P4 normal
Assignee: Marcos H. Woehrmann
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-09 02:07 UTC by Joerg Wunsch
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
gdevescv.c.patch (464 bytes, patch)
2008-07-09 02:08 UTC, Joerg Wunsch
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Joerg Wunsch 2008-07-09 02:07:26 UTC
The printer driver in contrib/eplaser/gdevescv.c cannot output to a pipe.
As usual printer filters (like foomatic for CUPS) have a tendency to use
pipes (like -sOutputFile="| cat >&3"), this becomes fatal for printers
supported by this driver.

The reason is because the driver uses gdev_vector_open_file_bbox()
which inherently implies that the output can be opened as a seekable
file.  It should use gdev_vector_open_file_options with the
VECTOR_OPEN_FILE_BBOX and VECTOR_OPEN_FILE_SEQUENTIAL_OK options
instead.
Comment 1 Joerg Wunsch 2008-07-09 02:08:40 UTC
Created attachment 4193 [details]
gdevescv.c.patch

Suggested fix.
Comment 2 Joerg Wunsch 2008-07-09 02:12:09 UTC
I just verified the same code is still present in the SVN trunk.
Comment 3 Ralph Giles 2008-07-10 14:47:41 UTC
I recommend applying.
Comment 4 Marcos H. Woehrmann 2008-07-14 11:53:58 UTC
Applied as r8839.