Allows the Epson AcuLaser device output to be sent to a pipe (closes bug 689953).

Thanks to j@uriah.heep.sax.de (Joerg Wunsch) for the patch.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8839 a1074d23-0009-0410-80fe-cf8c14f379e6